--- a/elemental_duel.html
+++ b/elemental_duel.html
@@ -89,12 +89,12 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <p style="font-weight: bolder; font-size: 15pt;">Please choose your arsenal:</p>
+                                <p style="font-weight: bolder; font-size: 15pt;">Please choose your element:</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="arsenal_container">
+                                <div class="element_container">
                                     <div class="col-lg-4">
                                         <div class="elemental" id="fire"><img class="img-elemental" src="gif/Fire_Elemental.webp" alt="fire"></div>
                                     </div>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="arsenal_container">
+                                <div class="element_container">
                                     <div class="col-lg-4">
                                         <div class="elemental" id="player"></div>
                                         <!-- <img src="gif/Fire_Elemental.webp" alt="fire"> -->
